--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic>=2.0",
     "httpx>=0.27.0",
     "rich>=13.0",
+    "langchain-openai>=0.1.0",
 ]
 
 [project.optional-dependencies]
